--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
             natural satellite of a planet in the Solar System relative to the size of its primary, having a quarter the diameter of Earth
             but only <sup>1</sup>/<sub>81</sub> its' mass.</p>
        <figure>
-            <img src= "themoon.jpg" alt= "The Moon as seen from Ottawa">
+            <img src= "C:\Users\Nickf\Downloads\themoon.jpg" alt= "The Moon as seen from Ottawa">
             <figcaption>The Moon as seen from Ottawa.</figcaption>
         </figure>
-        <p>You can learn more about the moon landings here.</p>
-        <a href="https://en.wikipedia.org/wiki/Moon_landing"> here</a>
+        <p>You can learn more about the moon landings <a href="https://en.wikipedia.org/wiki/Moon_landing"> here.</a></p>
+    
     <h3>Statistics About the Moon</h3>
     
     <ul><strong>Semi-major axis:</strong>384,399 km</ul>
